💄 visibility fixes

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -2,9 +2,10 @@
 
 html, body {
     height: 100%;
-    //background: url("https://c1.staticflickr.com/9/8233/8492465630_e1f4ec94d7_b.jpg") no-repeat center center fixed;
-    //background-size: cover;
-    background: #a8a8a8;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    //background-color: #a8a8a8;
 }
 
 body {
