--- a/src/less/search.less
+++ b/src/less/search.less
@@ -34,14 +34,17 @@
 
         &:checked + span {
             background: rgba(0, 0, 0, 0.6);
+            border: 1px solid white;
         }
     }
     span:hover {
         cursor: pointer;
         background: rgba(0, 0, 0, 0.3);
+        border: 1px solid #c7c7c7;
     }
     .uk-badge {
         background: rgba(0, 0, 0, 0.2);
         border-radius: @global-card-radius;
+        border: 1px dotted transparent;
     }
 }
