--- a/src/less/tabs.less
+++ b/src/less/tabs.less
@@ -41,7 +41,7 @@
 }
 
 .tab-tile {
-    width: calc(~"100%/5 - 21px");
+    width: calc(~"100%/5 - 23px");
     height: 1rem;
     display: inline-block;
     padding: 10px 5px;
@@ -52,10 +52,12 @@
     white-space: nowrap;
     overflow: hidden;
     text-align: left;
+    border: 1px solid transparent;
 
     &:hover {
         text-decoration: none;
         background: rgba(255, 255, 255, 0.8);
+        border: 1px solid black;
     }
     > * > div {
         display: inline-block;
